--- a/模型介绍.md
+++ b/模型介绍.md
@@ -2,7 +2,7 @@
 
 目标为创建一个模型来预测给定生成图像的文本提示。参赛选手将在包含Stable Diffusion 2.0生成的各种（提示、图像）对的数据集上进行预测，通过了解潜在存在的提示、图像之间关系的可逆性。参赛选手通过构建一个模型来预测给定生成图像的文本提示。并把这个文本提示与标注过的文本提示进行对比。
 
-![ques](.\md图片\ques.jpg)
+![ques](./md图片/ques.jpg)
 
 **评价方式使用预测的和实际的提示嵌入向量之间的平均余弦相似性得分来评估提交。**对于测试集中的每个图像，必须预测用于生成图像的提示，并将提示转换为384长度的嵌入向量。预测应该被展平为图像（imgId）和嵌入（eId）对（imgId_eId）的行。
 
